# CUP-Online-Judge-Judger

./: .gitignore  Bundle.cpp  Bundle.h  CMakeLists.txt  CompilerArgsReader.cpp  CompilerArgsReader.h  JSONVectorReader.cpp  JSONVectorReader.h  README.md  build.sh  build_docker.sh  compile.json  judge_client.cpp  judge_lib.h  judge_lib.h.cpp  okcalls.h  okcalls64.h  static_var.h  update-source.sh  upgrade.sh  websocket.cpp  websocket.h  wsjudged.cpp
.github/workflows/: test.yml
etc/: compile.json  config.json  judge.conf  language.json
header/: okcalls.h  okcalls64.h  static_var.cpp  static_var.h
manager/syscall/: InitManager.cpp  InitManager.h
model/: Bundle.cpp  Bundle.h  JSONVectorReader.cpp  JSONVectorReader.h  MySQLAutoPointer.cpp  MySQLAutoPointer.h  SubmissionInfo.cpp  SubmissionInfo.h  websocket.h
model/base/: Bundle.cpp  Bundle.h  JSONVectorReader.cpp  JSONVectorReader.h  MySQLAutoPointer.cpp  MySQLAutoPointer.h  Pack.cpp  Pack.h  SocketSender.cpp  SocketSender.h
model/config/: ConfigInfo.cpp  ConfigInfo.h
model/judge/language/: Bash.cpp  Bash.h  C11.cpp  C11.h  C99.cpp  C99.h  CMakeLists.txt  Clang.cpp  Clang.h  Clang11.cpp  Clang11.h  Clangpp.cpp  Clangpp.h  Clangpp17.cpp  Clangpp17.h  Cpp11.cpp  Cpp11.h  Cpp17.cpp  Cpp17.h  Cpp20.cpp  Cpp20.h  Cpp98.cpp  Cpp98.h  Csharp.cpp  Csharp.h  FreeBasic.cpp  FreeBasic.h  Go.cpp  Go.h  Java.cpp  Java.h  Java6.cpp  Java6.h  Java7.cpp  Java7.h  Java8.cpp  Java8.h  JavaScript.cpp  JavaScript.h  Kotlin.cpp  (+27 more)
model/judge/language/common/: BonusLimit.cpp  BonusLimit.h  CPython.cpp  CPython.h  seccomp_helper.cpp  seccomp_helper.h  syscall-name.h
model/judge/language/loader/: getLanguageModel.cpp  getLanguageModel.h
model/judge/language/syscall/bash/: syscall32.h  syscall64.h
model/judge/language/syscall/c11/: syscall32.h  syscall64.h
model/judge/language/syscall/csharp/: syscall32.h  syscall64.h
model/judge/language/syscall/freebasic/: syscall32.h  syscall64.h
model/judge/language/syscall/go/: syscall32.h  syscall64.h
model/judge/language/syscall/java/: syscall32.h  syscall64.h
model/judge/language/syscall/javascript/: syscall32.h  syscall64.h
model/judge/language/syscall/kotlin/: syscall64.h
model/judge/language/syscall/kotlin-native/: syscall64.h
model/judge/language/syscall/lua/: syscall32.h  syscall64.h
model/judge/language/syscall/objectivec/: syscall32.h  syscall64.h
model/judge/language/syscall/pascal/: syscall32.h  syscall64.h
model/judge/language/syscall/perl/: syscall32.h  syscall64.h
model/judge/language/syscall/php/: syscall32.h  syscall64.h
model/judge/language/syscall/pypy/: syscall32.h  syscall64.h
model/judge/language/syscall/pypy3/: syscall64.h
model/judge/language/syscall/python2/: syscall32.h  syscall64.h
model/judge/language/syscall/python3/: syscall64.h
model/judge/language/syscall/ruby/: syscall32.h  syscall64.h
model/judge/language/syscall/schema/: syscall32.h  syscall64.h
model/judge/language/util/: util.cpp  util.h
model/judge/policy/: SpecialJudge.cpp  SpecialJudge.h
model/submission/: SubmissionInfo.cpp  SubmissionInfo.h
model/websocket/: WebSocketSender.cpp  WebSocketSender.h
model/wrapper/: CompilerConfigReader.cpp  CompilerConfigReader.h  websocket.cpp  websocket.h
rapidjson/: document.h  reader.h
shell/: build_base.sh  build_config.sh  build_dependency.sh  build_source_code.sh  build_test_ci.sh  djudge.sh
sim/: Makefile  sim.sh
