cmake_minimum_required(VERSION 3.9)
project(judge_library)
set(CMAKE_CXX_STANDARD 17)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif ()
if (EXISTS "/usr/local/bin/gcc-9")
    set(CMAKE_C_COMPILER /usr/local/bin/gcc-9)
    set(CMAKE_CXX_COMPILER /usr/local/bin/g++-9)
elseif (EXISTS "/usr/local/bin/gcc-8")
    set(CMAKE_C_COMPILER /usr/local/bin/gcc-8)
    set(CMAKE_CXX_COMPILER /usr/local/bin/g++-8)
elseif (EXISTS "/usr/local/bin/gcc")
    set(CMAKE_C_COMPILER /usr/local/bin/gcc)
    set(CMAKE_CXX_COMPILER /usr/local/bin/g++)
else ()
    set(CMAKE_C_COMPILER /usr/bin/gcc)
    set(CMAKE_CXX_COMPILER /usr/bin/g++)
endif ()
set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/out)
add_library(c11 SHARED C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(c99 SHARED C99.h C99.cpp C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(bash SHARED Bash.h Bash.cpp Language.cpp Language.h util/util.h util/util.cpp)
add_library(clang SHARED Clang.h Clang.cpp C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(clang11 SHARED Clang11.h Clang11.cpp C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(clangpp SHARED Clangpp.h Clangpp.cpp C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(clangpp17 SHARED Clangpp17.h Clangpp17.cpp C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(cpp11 SHARED Cpp11.cpp Cpp11.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(cpp17 SHARED Cpp17.cpp Cpp17.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(cpp98 SHARED Cpp98.cpp Cpp98.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(csharp SHARED Csharp.cpp Csharp.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(freebasic SHARED FreeBasic.cpp FreeBasic.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(go SHARED Go.cpp Go.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(java SHARED Java.cpp Java.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(java6 SHARED Java6.cpp Java6.h Java.cpp Java.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(java7 SHARED Java7.cpp Java7.h Java.cpp Java.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(java8 SHARED Java8.cpp Java8.h Java.cpp Java.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(javascript SHARED JavaScript.h JavaScript.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(lua SHARED Lua.cpp Lua.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(objectivec SHARED Objc.cpp Objc.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(pascal SHARED Pascal.cpp Pascal.h C11.h C11.cpp Language.h Language.cpp util/util.h util/util.cpp)
add_library(perl SHARED Perl.cpp Perl.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(php SHARED Php.cpp Php.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(pypy SHARED PyPy.cpp PyPy.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(pypy3 SHARED PyPy3.cpp PyPy3.h Language.h Language.cpp util/util.h util/util.cpp)
add_library(python2 SHARED Python2.cpp Python2.h Language.h Language.cpp common/CPython.cpp common/CPython.h util/util.h util/util.cpp)
add_library(python3 SHARED Python3.cpp Python3.h Language.h Language.cpp common/CPython.cpp common/CPython.h util/util.h util/util.cpp)
add_library(ruby SHARED Ruby.cpp Ruby.h Language.h Language.cpp util/util.h util/util.cpp util/util.h util/util.cpp)
add_library(schema SHARED Schema.cpp Schema.h Language.h Language.cpp util/util.h util/util.cpp)
